--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,15 +8,20 @@
 body {
     background-color: #548687;
     text-align: center;
+    font-family: "Roboto", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 700;
+    font-optical-sizing: auto;
 }
+
 #status {
     color: rgb(0, 255, 0);
 
 }
 
-.drawText{
-   color: red
+.drawText {
+    color: red
 }
+
 .board {
     height: 70vh;
     display: flex;
@@ -50,6 +57,7 @@ body {
 .winner {
     background: rgb(0, 255, 0);
 }
+
 .draw {
     background-color: rgb(235, 36, 36);
 }
@@ -64,4 +72,3 @@ button {
     cursor: pointer;
     margin-top: 2rem;
 }
-
